# MIMIC_IV_time_to_death

./: LICENSE  Makefile  README.md  Task_1_Qualititative_data_analysis.ipynb  assumptions.md  main.py  pyproject.toml  requirements.txt  shap_force_plot.html
assessment/: __init__.py  config.py  datasets.py  features_hosp.py  hosp_agg_processed_features.py  hosp_diagnosis.py  hosp_labevents.py  hosp_labevents_windowed.py  hosp_meds.py  hosp_procedure.py
assessment/modeling/: predict.py  train.py
models/: dummy_pipeline.pkl  hist_pipeline.pkl  hub_pipeline.pkl  lr_pipeline.pkl  rf_pipeline.pkl  xgboost_pipeline.pkl
notebooks/: 0.0_Explore_files.ipynb  0.1_hosp_check_interim_results.ipynb  0.2_hosp_check_processed_results.ipynb
